# Bookly

./: .gitignore  pyproject.toml  readme.md
src/: __init__.py  config.py
src/books/: bookJson.py  book_db.py  book_schema.py  book_service.py  models.py  routes.py  schemas.py
src/db/: __init__.py
