[project]
name = "bookly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pydantic-settings>=2.12.0",
    "sqlmodel>=0.0.31",
    "uvicorn[standard]>=0.24.0",
]

[project.scripts]
bookly = "main:main"

